--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,20 @@
 mensagem.invalida=Mensagem Inv\u00E1lida
 recurso.nao-encontrado=Recurso n\u00E3o encontrado
+recurso.operacao-nao-permitida=Opera\u00E7\u00E3o n\u00E3o permitida.
+pessoa.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no lan\u00E7\amento.
 
 
 #classe.atributo
 categoria.nome=Nome
 pessoa.nome=Nome
 pessoa.ativo=Ativo
+
+lancamento.descricao=Descri\u00E7\u00E3o
+lancamento.dataVencimento=Data de vencimento
+lancamento.valor=Valor
+lancamento.tipo=Tipo
+lancamento.categoria=Categoria
+lancamento.pessoa=Pessoa
+
+pessoa.inexistente=Pessoa inexistente para incuir no lan\u00E7amento
+pessoa.inativa=Pessoa inativa para incuir no lançamento
